@@ -1,0 +1,20 @@
+/* { dg-do run } */
+
+type Foo =
+  union int<32>
+    {
+      int<32> One == 1;
+      int<32> Two == 2;
+      method _print = void:
+      {
+        if (1)
+          {
+            printf ("%s %v", SELF'ename (0), SELF'elem (0));
+          }
+      }
+    };
+
+/* { dg-command { .set obase 10 } } */
+/* { dg-command { .set pretty-print yes } } */
+/* { dg-command {Foo {Two=2}} } */
+/* { dg-output "Two 2" } */
